--- a/minggu-2/hari-5/sliver_appbar/pubspec.yaml
+++ b/minggu-2/hari-5/sliver_appbar/pubspec.yaml
@@ -1,4 +1,4 @@
-name: sliver_basic
+name: sliver_appbar
 description: A new Flutter project.
 
 # The following defines the version and build number for your application.
